--- a/basicktest/src/main/res/layout/activity_utilk_asset.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_asset.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".utilk.UtilKAssetActivity">
+        tools:context=".utilk.res.UtilKAssetActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/utilk_asset_recycler"
