--- a/basicktest/src/main/res/layout/activity_utilk_file.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_file.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".utilk.UtilKFileActivity">
+        tools:context=".utilk.java.UtilKFileActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/utilk_file_recycler"
