--- a/basicktest/src/main/res/layout/activity_utilk.xml
+++ b/basicktest/src/main/res/layout/activity_utilk.xml
@@ -12,6 +12,12 @@
 
         <com.google.android.material.button.MaterialButton
             style="@style/BtnStyle"
+            android:onClick="goUtilKApk"
+            android:text="goUtilKApk"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BtnStyle"
             android:onClick="goUtilKContent"
             android:text="goUtilKContent"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
